add agency images

--- a/homepage/html/use-case/nonprofits.html
+++ b/homepage/html/use-case/nonprofits.html
@@ -1,4 +1,4 @@
-<main class="page page--use-case">
+<main class="page page--use-case page--use-case-nonprofits">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
